--- a/app/src/main/res/drawable/default_btn_selector.xml
+++ b/app/src/main/res/drawable/default_btn_selector.xml
@@ -4,11 +4,13 @@
     <item android:state_pressed="false">
         <shape>
             <solid android:color="#00ffffff"/>
+            <corners android:radius="@dimen/_5sdp"/>
         </shape>
     </item>
     <item android:state_pressed="true">
         <shape>
             <solid android:color="#EEEEEE"/>
+            <corners android:radius="@dimen/_5sdp"/>
         </shape>
     </item>
 
