--- a/app/src/main/res/layout/dialog_request_for_call.xml
+++ b/app/src/main/res/layout/dialog_request_for_call.xml
@@ -67,27 +67,49 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/requestCallText" />
 
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/phoneNoEdt"
-                android:layout_width="0dp"
+            <LinearLayout
+                android:id="@+id/editlayout"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_15sdp"
                 android:background="@drawable/grey_stroke"
-                android:fontFamily="@font/opensans_regular"
-                android:gravity="center"
-                android:hint="@string/phone_number"
-                android:inputType="phone"
-                android:maxLength="13"
-                android:padding="@dimen/_10sdp"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_14ssp"
+                android:orientation="horizontal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/enterPhoneText" />
+                app:layout_constraintTop_toBottomOf="@+id/enterPhoneText">
+
+                <com.rilixtech.widget.countrycodepicker.CountryCodePicker
+                    android:id="@+id/ccpCountryCode"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    app:ccp_defaultCode="91"
+                    app:ccp_textSize="@dimen/_12ssp" />
+
+                <View
+                    android:layout_width="0.5dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="@dimen/_2sdp"
+                    android:background="@color/grey" />
+
+                <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/edPhoneNumber"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_4sdp"
+                    android:background="@android:color/transparent"
+                    android:hint="@string/enter_mobile_number_mandatory"
+                    android:inputType="phone"
+                    android:maxLength="10"
+                    android:padding="@dimen/_10sdp"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/grey"
+                    android:textSize="@dimen/_13ssp" />
+            </LinearLayout>
+
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btnUpdateProfile"
+                android:id="@+id/btnCallMe"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_20sdp"
@@ -101,7 +123,7 @@
                 android:textSize="@dimen/_16ssp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/phoneNoEdt" />
+                app:layout_constraintTop_toBottomOf="@+id/editlayout" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
