--- a/app/src/main/res/layout/row_photos.xml
+++ b/app/src/main/res/layout/row_photos.xml
@@ -26,13 +26,13 @@
     </data>
 
     <FrameLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
         <FrameLayout
             android:id="@+id/containerLayout"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="@dimen/_70sdp"
+            android:layout_height="@dimen/_70sdp"
             android:layout_gravity="center">
 
             <ImageView
